Enhance backend and client functionality for AI Trading Platform. Added new routes for market, trades, backtest, performance, and strategies. Integrated WebSocket server for real-time data updates. Updated package dependencies and improved UI components for better user experience.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
-    "workbench.colorCustomizations": {
-        "activityBar.background": "#372D08",
-        "titleBar.activeBackground": "#4D3E0C",
-        "titleBar.activeForeground": "#FDFAF1"
-    }
+  "workbench.colorCustomizations": {
+    "activityBar.background": "#372D08",
+    "titleBar.activeBackground": "#4D3E0C",
+    "titleBar.activeForeground": "#FDFAF1"
+  },
+  "cSpell.words": ["backtest", "uuidv"]
 }
