--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/uuid": "^10.0.0",
+    "@types/ws": "^8.18.1",
+    "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
@@ -21,7 +27,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "nodemailer": "^6.10.0",
-    "validator": "^13.15.0"
+    "uuid": "^11.1.0",
+    "validator": "^13.15.0",
+    "ws": "^8.18.1"
   },
   "devDependencies": {
     "jest": "^29.7.0",
